k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navlambda-studio
  labels:
    name: navlambda-studio
    app: navlambda-studio
